# my_robot_error

./: .gitignore  README.md  frames_2025-11-02_00.25.07.gv
src/demo_robot_stop/: package.xml  setup.cfg  setup.py
src/demo_robot_stop/demo_robot_stop/: circle_node.py  lidar_sim_node.py  sicher_marker_node.py  sicher_stop.py
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/config/: bridge_config.yaml  gz_bridge.yaml  robot_ros2_controller.yaml
src/my_robot_description/launch/: diff_plugin_launch.py  display_robot.launch.py  gazebo_sim.launch.py  gz_sim.launch.xml  gz_sim_launch.py  launch.py
src/my_robot_description/urdf/: robot.sdf  robot_presatation.gv  roboter.urdf  roboter.xacro
src/my_robot_description/urdf/robot/: base.urdf.xacro  commen_inertia.xacro  robot.sdf  robot.urdf  robot.urdf.xacro  robot_ros2_control.xacro  test.urdf
src/my_robot_description/urdf/robot/actuator/: caster.urdf.xacro  wheel.urdf.xacro
src/my_robot_description/urdf/robot/plugins/: gazebo_IMU_plugin.xacro  gazebo_camera_plugin.xacro  gazebo_control_plugin.xacro  gazebo_lidar_plugin.xacro
src/my_robot_description/urdf/robot/sensor/: camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
src/my_robot_description/world/: haus.sdf  robot_haus.sdf  robot_room.sdf  room.sdf
